--- a/src/app/components/vete/veterinario/veterinarian-dashboard.component.html
+++ b/src/app/components/vete/veterinario/veterinarian-dashboard.component.html
@@ -69,7 +69,7 @@
             </svg>
             <span>Nueva Consulta</span>
           </button>
-          <button class="btn-outline flex flex-col items-center justify-center space-y-2 h-20">
+          <button class="btn-outline flex flex-col items-center justify-center space-y-2 h-20" (click)="openBuscadorMascota()">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <circle cx="11" cy="11" r="8" stroke="currentColor" stroke-width="2"/>
               <line x1="21" y1="21" x2="16.65" y2="16.65" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
