--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-<!-- Mostrar navbar según login o ruta -->
-<ng-container *ngIf="!isLoginPage()">
-  <app-navbar-public *ngIf="!isLoggedIn()" />
-  <app-navbar-private *ngIf="isLoggedIn()" />
+<!-- Navbar según login -->
+<ng-container *ngIf="showNavbarPublic !== null">
+  <app-navbar-public *ngIf="showNavbarPublic"></app-navbar-public>
+  <app-navbar-private *ngIf="!showNavbarPublic"></app-navbar-private>
 </ng-container>
 
-<!-- index -->
+
+<!-- Contenido principal -->
 <section class="mx-5 mt-2">
   <router-outlet></router-outlet>
 </section>
 
-<!-- Mostrar chat-bot solo en index -->
-<router-outlet></router-outlet>
-<app-chat-bot/>
+<!-- Chat-bot solo en index (podemos esconderlo por ruta en el futuro) -->
+<app-chat-bot></app-chat-bot>
 
-<!-- <footer>Soy un footer</footer> -->
+<!-- Footer general -->
 <app-footer></app-footer>
 
