--- a/src/app/pages/agendar/agendar-page.component.html
+++ b/src/app/pages/agendar/agendar-page.component.html
@@ -23,14 +23,29 @@
               placeholder="Ingrese el nombre del cliente">
           </div>
           <div class="form-group">
+            <label>Apellido del Cliente:</label>
+            <input type="text" [(ngModel)]="apellidoCliente" name="apellidoCliente" class="form-control"
+              placeholder="Ingrese el apellido del cliente">
+          </div>
+          <div class="form-group">
+            <label>Dirección:</label>
+            <input type="text" [(ngModel)]="direccion" name="direccion" class="form-control"
+              placeholder="Ingrese la dirección del cliente">
+          </div>
+          <div class="form-group">
             <label>Teléfono:</label>
             <input type="tel" [(ngModel)]="telefono" name="telefono" class="form-control"
               placeholder="Ingrese el teléfono del cliente">
           </div>
           <div class="form-group">
-            <label>Correo Electrónico:</label>
-            <input type="email" [(ngModel)]="correo" name="correo" class="form-control"
+            <label>Email:</label>
+            <input type="email" [(ngModel)]="email" name="email" class="form-control"
               placeholder="Ingrese el correo del cliente">
+          </div>
+          <div class="form-group">
+            <label>Ciudad:</label>
+            <input type="text" [(ngModel)]="ciudad" name="ciudad" class="form-control"
+              placeholder="Ingrese la ciudad del cliente">
           </div>
         </div>
 
